# misc

./: README.md
find_neighbours/: find.hs
mandelbrot/: ascii_mandelbrot.rs
mascarade/: mascarade.hs
nonosolver/: Makefile  configure  configure.in
nonosolver/check/: basic.nono  bird.nono  hard.nono  impossible.nono
nonosolver/scripts/: todo.sh
nonosolver/src/: cell.hh  cell.hxx  foreach.hh  grid.cc  grid.hh  grid.hxx  line_solver.cc  line_solver.hh  main.cc  solver.cc  solver.hh  solver.hxx
quine/: Makefile  quine.asm  quine.c
solitaire/: Makefile  cell.hh  direction.cc  direction.hh  error.hh  grid.cc  grid.hh  grid.hxx  grids.cc  grids.hh  main.cc  position.hh  solver.cc  solver.hh
